<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="today">Today</string>
    <string name="new_task">NewTask</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>
</resources>