<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/today" />
        <item
            android:id="@+id/nav_new_task"
            android:icon="@drawable/plus"
            android:title="@string/new_task" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/tool"
            android:title="@string/all" />
        <item
            android:id="@+id/nav_completed"
            android:icon="@drawable/baseline_done_24"
            android:title="@string/completed" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>